# UniverseEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  build_win.bat  open_vs_cmake.bat
OpenSpecTest/: CMakeLists.txt  OpenSpecTest.cpp  OpenSpecTest.h
OpenSpecTest/Content/: AssetRedirects.json  template_caves.uasset
OpenSpecTest/Content/Meshes/: SM_2CE_1.uasset  box_1.uasset
OpenSpecTest/Content/Meshes/Import/: SM_2CE.uasset  animation_with_skeleton.uasset  box.uasset  huesitos.uasset
OpenSpecTest/Content/Meshes/Imported/: 2CylinderEngine.uasset  animation_with_skeleton.uasset  box.uasset  huesitos.uasset
OpenSpecTest/Content/Model_1/: animation_with_skeleton_1.uasset  blender_269_regress1.uasset  cubes_with_outofrange_float.uasset  huesitos.uasset  huesitos_1.uasset
OpenSpecTest/Content/Model_1/999/: huesitos_2.uasset  spider.uasset
OpenSpecTest/Content/Model_1/Newfff/: huesitos_2.uasset  spider.uasset
OpenSpecTest/Content/Model_1/ff/: spider.uasset  (+1 more)
OpenSpecTest/Content/Models/: animation_with_skeleton_1.uasset  huesitos_1.uasset  huesitos_2.uasset  huesitos_2_1.uasset  huesitos_2_2.uasset  spider.uasset  spider_1.uasset  spider_2.uasset  spider_3.uasset
OpenSpecTest/Content/Textures/: easy_font_raw.uasset
OpenSpecTest/Content/ffffwe/: cubes_with_outofrange_float.uasset  easy_font_raw.uasset
OpenSpecTest/Shader/: ColorPassPS.hlsl  ColorPassVS.hlsl
OpenSpecTest/data/config/: gameplay.json
OpenSpecTest/data/fish/: fish_species.csv
OpenSpecTest/data/models/: placeholder_rod.gltf
OpenSpecTest/src/app/: GameApp.cpp  GameApp.h
OpenSpecTest/src/asset/: AssetDeleteService.cpp  AssetDeleteService.h  AssetDuplicateService.cpp  AssetDuplicateService.h  AssetFolderTree.cpp  AssetFolderTree.h  AssetManager.cpp  AssetManager.h  AssetPackageHeader.cpp  AssetPackageHeader.h  AssetRedirectStore.cpp  AssetRedirectStore.h  AssetReferenceResolver.cpp  AssetReferenceResolver.h  AssetRegistry.cpp  AssetRegistry.h  AssetRenameService.cpp  AssetRenameService.h  AssetSerializer.cpp  AssetSerializer.h  AssetTypeInfo.cpp  AssetTypeInfo.h  MeshImportFactory.cpp  MeshImportFactory.h  ProjectPaths.cpp  ProjectPaths.h  SoftObjectPath.cpp  SoftObjectPath.h  TextureImportFactory.cpp  TextureImportFactory.h
OpenSpecTest/src/components/: ActorComponent.cpp  ActorComponent.h  MeshComponent.cpp  MeshComponent.h  PrimitiveComponent.cpp  PrimitiveComponent.h  SceneComponent.cpp  SceneComponent.h  SkeletalMeshComponent.cpp  SkeletalMeshComponent.h  SkinnedMeshComponent.cpp  SkinnedMeshComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h
OpenSpecTest/src/core/: ObjectRegistry.cpp  ObjectRegistry.h  UClass.cpp  UClass.h  UObject.cpp  UObject.h
OpenSpecTest/src/data/: AssimpCoordinate.cpp  AssimpCoordinate.h  EditorPerformanceStore.cpp  EditorPerformanceStore.h  EditorPreferences.h  EditorPreferencesStore.cpp  EditorPreferencesStore.h  GameplayConfig.h  GameplayConfigStore.cpp  GameplayConfigStore.h  ImageDecoder.cpp  ImageDecoder.h  MeshImporter.cpp  MeshImporter.h  ResourceLoader.cpp  ResourceLoader.h  TextureCookUtils.cpp  TextureCookUtils.h
OpenSpecTest/src/editor/: EditorActorBoundsDebug.cpp  EditorActorBoundsDebug.h  EditorActorTransform.cpp  EditorActorTransform.h  EditorPerformanceSettings.h  EditorPickBvh.cpp  EditorPickBvh.h  EditorPicking.cpp  EditorPicking.h  EditorRayIntersection.cpp  EditorRayIntersection.h  EditorTransformGizmo.cpp  EditorTransformGizmo.h  EditorTriangleBvh.cpp  EditorTriangleBvh.h  EditorTypes.h  EditorViewMatrices.cpp  EditorViewMatrices.h
OpenSpecTest/src/math/: FRotator3.cpp  FRotator3.h  FTransform.cpp  FTransform.h  FVector2D.cpp  FVector2D.h  FVector3.cpp  FVector3.h  FVector4.cpp  FVector4.h  Math.h
OpenSpecTest/src/reflection/: Enum.cpp  Enum.h  Field.cpp  Field.h  Function.cpp  Function.h  FunctionFlags.h  GeneratedRegistration.cpp  GeneratedRegistration.h  Property.cpp  Property.h  PropertyFlags.h  PropertyMetadata.h  PropertySerializer.cpp  PropertySerializer.h  ReflectionMacros.h  ReflectionRegistry.cpp  ReflectionRegistry.h  ScriptStruct.cpp  ScriptStruct.h
OpenSpecTest/src/render/: Dx12Renderer.cpp  Dx12Renderer.h  RenderCollector.cpp  RenderCollector.h  ResourceRegistry.cpp  ResourceRegistry.h
OpenSpecTest/src/serialization/: ComponentSerializer.cpp  ComponentSerializer.h
OpenSpecTest/src/tests/: AssetSerializerTests.cpp  ComponentSystemTests.cpp  Dx12RendererTestStub.cpp  GameplayConfigStoreTests.cpp  LevelSaveLoadTests.cpp  ObjectRegistryTests.cpp  ReflectionRuntimeTests.cpp  TextureSerializerTests.cpp  WorldLifecycleTests.cpp
OpenSpecTest/src/ui/: AssetBrowserItemInteraction.cpp  AssetBrowserItemInteraction.h  AssetBrowserItemTooltipWidget.cpp  AssetBrowserItemTooltipWidget.h  AssetBrowserPanelWidget.cpp  AssetBrowserPanelWidget.h  AssetBrowserTypeFilterWidget.cpp  AssetBrowserTypeFilterWidget.h  AssetListModel.cpp  AssetListModel.h  AssetTileDelegate.cpp  AssetTileDelegate.h  CameraSpeedControlWidget.cpp  CameraSpeedControlWidget.h  DetailPanelWidget.cpp  DetailPanelWidget.h  DraggableDoubleSpinBox.cpp  DraggableDoubleSpinBox.h  EditorOutputLog.cpp  EditorOutputLog.h  EditorPerformanceDialog.cpp  EditorPerformanceDialog.h  EditorPreferencesDialog.cpp  EditorPreferencesDialog.h  EditorStyle.cpp  EditorStyle.h  ImportModelTransformDialog.cpp  ImportModelTransformDialog.h  ImportTextureDialog.cpp  ImportTextureDialog.h  MainWindow.cpp  MainWindow.h  OutputLogPanelWidget.cpp  OutputLogPanelWidget.h  PropertyDetailsBuilder.cpp  PropertyDetailsBuilder.h  ScrollablePanelWidget.cpp  ScrollablePanelWidget.h  TexturePreviewDialog.cpp  TexturePreviewDialog.h  (+2 more)
OpenSpecTest/src/world/: Actor.cpp  Actor.h  ActorSaveData.h  ActorTransform.h  Level.cpp  Level.h  LevelSaveData.h  SkeletalMeshActor.cpp  SkeletalMeshActor.h  StaticMeshActor.cpp  StaticMeshActor.h  Vector3Serialization.h  World.cpp  World.h
Tools/ReflectionGenerator/: CMakeLists.txt  ClangAstScanner.cpp  ClangAstScanner.h  CodeEmitter.cpp  CodeEmitter.h  MacroParser.cpp  MacroParser.h  Main.cpp  ReflectionGeneratorApp.cpp  ReflectionGeneratorApp.h  ReflectionTypes.h
(+124 files in other folders)
